--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.13",
     "cssnano": "^4.1.10",
+    "dotenv": "^8.5.1",
+    "google-spreadsheet": "^3.1.15",
     "gulp": "^4.0.2",
     "gulp-babel": "^7.0.1",
     "gulp-plumber": "^1.2.1",
